tdf#103641: Convert 'wopi:' message to JSON formatted message

... to accomdate other WOPI properties easily in future.

Change-Id: Ic92364f06f4f16ebe8f9f128cd49087f6d72a4d1